test/Fail/Issue7796.err
Issue7796.agda:13.1-14.13: error: [TerminationIssue]
Termination checking failed for the following function:
  u
Problematic call:
  u (at Issue7796.agda:14.12-13)
